--- a/public/oauth.html
+++ b/public/oauth.html
@@ -18,7 +18,7 @@
 		</svg>
 	</div>
 	<div class="container">
-		<img class="wx-follow" src="/tin-ai.png" alt="wx-qr-code">
+		<img class="wx-follow" src="/wx-qrcode.png" alt="wx-qrcode">
 		<div class="tip1">请先扫码关注【TinAI生态】微信公众号</div>
 		<div class="choices">
 			<div id="by-scan" class="active">二维码</div>
